--- a/Hangman/res/layout/activity_game.xml
+++ b/Hangman/res/layout/activity_game.xml
@@ -85,4 +85,28 @@
       android:layout_marginBottom="20dp"
       android:text="Letters" />
 
+  <Button
+      android:id="@+id/saveGame"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignBottom="@+id/highscores"
+      android:layout_toRightOf="@+id/highscores"
+      android:text="Save Game" />
+
+  <Button
+      android:id="@+id/highscores"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignLeft="@+id/button2"
+      android:layout_below="@+id/switch1"
+      android:layout_marginTop="52dp"
+      android:text="Highscores" />
+
+  <Button
+      android:id="@+id/settings"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/highscores"
+      android:text="Settings" />
+
 </RelativeLayout>
