--- a/Hangman/res/layout/continue_dialog.xml
+++ b/Hangman/res/layout/continue_dialog.xml
@@ -4,6 +4,7 @@
     android:layout_height="fill_parent" >
  
     <ImageView
+        android:contentDescription="Continue image"
         android:id="@+id/imageDialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,7 +19,7 @@
  
      <Button
         android:id="@+id/ContinueButton"
-        android:layout_width="300dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Continue"
         android:layout_marginTop="5dp"
