--- a/Hangman/res/layout/activity_game.xml
+++ b/Hangman/res/layout/activity_game.xml
@@ -18,35 +18,6 @@
         android:layout_marginRight="22dp"
         android:text="Exit" />
 
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/button1"
-        android:layout_below="@+id/button1"
-        android:layout_marginTop="161dp"
-        android:onClick="EvilSwitch"
-        android:text="Evilswitch" />
-
-    <Button
-        android:id="@+id/button2"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/switch1"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="41dp"
-        android:text="Restart" />
-
-  <TextView
-      android:id="@+id/something"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_above="@+id/button2"
-      android:layout_alignLeft="@+id/button2"
-      android:layout_marginLeft="44dp"
-      android:text="TextView" />
-
   <TextView
       android:id="@+id/theword"
       android:layout_width="wrap_content"
@@ -61,29 +32,11 @@
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/button2"
       android:layout_alignBottom="@+id/button2"
-      android:layout_toRightOf="@+id/something"
-      android:maxLength="1"
+      android:layout_alignLeft="@+id/something"
       android:ems="4"
       android:imeOptions="actionSend"
       android:inputType="text"
-       />
-
-  <TextView
-      android:id="@+id/guesses"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_above="@+id/input"
-      android:layout_alignRight="@+id/switch1"
-      android:text="Guesses" />
-
-  <TextView
-      android:id="@+id/guessedLetters"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_above="@+id/something"
-      android:layout_alignLeft="@+id/something"
-      android:layout_marginBottom="20dp"
-      android:text="Letters" />
+      android:maxLength="1" />
 
   <Button
       android:id="@+id/saveGame"
@@ -97,16 +50,53 @@
       android:id="@+id/highscores"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_alignLeft="@+id/button2"
-      android:layout_below="@+id/switch1"
-      android:layout_marginTop="52dp"
+      android:layout_alignLeft="@+id/settings"
+      android:layout_alignParentBottom="true"
+      android:layout_marginBottom="109dp"
       android:text="Highscores" />
+
+  <Button
+      android:id="@+id/button2"
+      style="?android:attr/buttonStyleSmall"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignLeft="@+id/theword"
+      android:layout_below="@+id/theword"
+      android:layout_marginTop="81dp"
+      android:text="Restart" />
+
+  <TextView
+      android:id="@+id/guesses"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_above="@+id/input"
+      android:layout_alignLeft="@+id/button2"
+      android:layout_marginBottom="22dp"
+      android:text="Guesses" />
+
+  <TextView
+      android:id="@+id/guessedLetters"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_above="@+id/guesses"
+      android:layout_alignLeft="@+id/guesses"
+      android:layout_marginBottom="16dp"
+      android:text="Letters" />
+
+  <TextView
+      android:id="@+id/something"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_above="@+id/guesses"
+      android:layout_alignRight="@+id/button1"
+      android:text="TextView" />
 
   <Button
       android:id="@+id/settings"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_below="@+id/highscores"
+      android:layout_alignLeft="@+id/button2"
+      android:layout_below="@+id/saveGame"
       android:text="Settings" />
 
 </RelativeLayout>
